RESOLVED FIXED138876
[WK2 UI-side Compositing] Fix the position and scroll indicator of the UI-side tiled scrolling indicator
https://bugs.webkit.org/show_bug.cgi?id=138876
Summary [WK2 UI-side Compositing] Fix the position and scroll indicator of the UI-sid...
Simon Fraser (smfr)
Reported 2014-11-19 12:20:45 PST
[WK2 UI-side Compositing] Fix the position and scroll indicator of the UI-side tiled scrolling indicator
Attachments
Patch (8.05 KB, patch)
2014-11-19 12:24 PST, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2014-11-19 12:24:10 PST
Simon Fraser (smfr)
Comment 2 2014-11-19 13:31:34 PST
Note You need to log in before you can comment on or make changes to this bug.